# csv_analyzer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-ci.yml
src/csv_analyzer/: __init__.py  __main__.py  loader.py  main.py  stats.py  transform.py  validation.py
tests/: test_stats.py
